feat: ヘッダーの作成

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,7 +12,9 @@
 
 <main>
   <div class="py-4">
-
+    <div class="container text-center">
+      <h1><a href="./"><img alt="カフェ Mr.M COFFEE" src="https://placehold.jp/244x47.png"></a></h1>
+    </div>
   </div>
   <div class="py-4">
 
