--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,9 +6,12 @@
 
 </header>
 
-<nav>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+  <div class="container">
 
+  </div>
 </nav>
+
 
 <main>
   <div class="py-4">
