--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,7 +8,10 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
   <div class="container">
-
+    <a href="./" class="navbar-brand">Mr.M COFFEE</a>
+    <button aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar-content" data-toggle="collapse" type="button">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
 </nav>
 
