--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,6 +12,31 @@
     <button aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar-content" data-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbar-content">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a href="#" class="nav-link">Top <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Coupon</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Information</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="contact" class="nav-link btn btn-info">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
