--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -26,8 +26,14 @@
         <li class="nav-item">
           <a href="#" class="nav-link">Coupon</a>
         </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">Information</a>
+        <li class="nav-item dropdown">
+          <a aria-expanded="false" aria-haspopup="true" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdown" role="button">
+            Information
+          </a>
+          <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+            <a href="#" class="dropdown-item">Shop</a>
+            <a href="#" class="dropdown-item">Access</a>
+          </div>
         </li>
       </ul>
 
