--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -112,7 +112,29 @@
     </div>
   </div>
   <div class="py-4">
-
+    <section id="about">
+      <div class="container">
+        <div class="row mb-4">
+          <div class="col-md-8 mb-3">
+            コンテンツ見出しと紹介文が入ります
+          </div>
+          <div class="col-md-4">
+            画像が入ります
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            カードが入ります
+          </div>
+          <div class="col-md-4">
+            カードが入ります
+          </div>
+          <div class="col-md-4">
+            カードが入ります
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   <div class="py-4">
 
