feat: コンテンツ下段の作成

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -128,13 +128,37 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            カードが入ります
+            <div class="card mb-3">
+              <img src="https://placehold.jp/380x160.png" alt="" class="img-fluid">
+              <div class="card-body d-flex justify-content-between">
+                <h4 class="card-title">くつろぎの空間</h4>
+                <button class="btn btn-secondary">
+                  詳しく見る
+                </button>
+              </div>
+            </div>
           </div>
           <div class="col-md-4">
-            カードが入ります
+            <div class="card mb-3">
+              <img alt="" class="img-fluid" src="https://placehold.jp/380x160.png">
+              <div class="card-body d-flex justify-content-between">
+                <h4 class="card-title">雑貨コーナー</h4>
+                <button class="btn btn-secondary">
+                  詳しく見る
+                </button>
+              </div>
+            </div>
           </div>
           <div class="col-md-4">
-            カードが入ります
+            <div class="card mb-3">
+              <img alt="" class="img-fluid" src="https://placehold.jp/380x160.png">
+              <div class="card-body d-flex justify-content-between">
+                <h4 class="card-title">キッズドリンク</h4>
+                <button class="btn btn-secondary">
+                  詳しく見る
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
