feat: モーダルの組み込み

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -132,7 +132,7 @@
               <img src="https://placehold.jp/380x160.png" alt="" class="img-fluid">
               <div class="card-body d-flex justify-content-between">
                 <h4 class="card-title">くつろぎの空間</h4>
-                <button class="btn btn-secondary">
+                <button class="btn btn-secondary" data-target="#modal01" data-toggle="modal" >
                   詳しく見る
                 </button>
               </div>
@@ -143,7 +143,7 @@
               <img alt="" class="img-fluid" src="https://placehold.jp/380x160.png">
               <div class="card-body d-flex justify-content-between">
                 <h4 class="card-title">雑貨コーナー</h4>
-                <button class="btn btn-secondary">
+                <button class="btn btn-secondary" data-target="#modal02" data-toggle="modal">
                   詳しく見る
                 </button>
               </div>
@@ -154,7 +154,7 @@
               <img alt="" class="img-fluid" src="https://placehold.jp/380x160.png">
               <div class="card-body d-flex justify-content-between">
                 <h4 class="card-title">キッズドリンク</h4>
-                <button class="btn btn-secondary">
+                <button class="btn btn-secondary" data-target="#modal03" data-toggle="modal">
                   詳しく見る
                 </button>
               </div>
