--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -454,4 +454,33 @@
     </section>
   </div>
 </main>
-<footer class="py-4">
+<footer class="py-4 bg-dark text-light">
+  <div class="container text-center">
+    <ul class="nav justify-content-center mb-3">
+      <li class="nav-item">
+        <a href="#" class="nav-link">Top</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">News</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">About</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Menu</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Coupon</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Information</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Contact</a>
+      </li>
+    </ul>
+    <p>
+      <small>Copyright &copy;2017 Mr. M COFFEE, All Right Reserved.</small>
+    </p>
+  </div>
+</footer>
