--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,6 +6,7 @@
   <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
+  <link rel="stylesheet" href="css/custom.css">
   <title>カフェ Mr.M COFFEE（ミスターエムコーヒー）</title>
 </head>
 <body>
