--- a/app/views/contact.erb
+++ b/app/views/contact.erb
@@ -140,19 +140,19 @@
         <a href="./#" class="nav-link">Top</a>
       </li>
       <li class="nav-item">
-        <a href="./#" class="nav-link">News</a>
+        <a href="./#news" class="nav-link">News</a>
       </li>
       <li class="nav-item">
-        <a href="./#" class="nav-link">About</a>
+        <a href="./#about" class="nav-link">About</a>
       </li>
       <li class="nav-item">
-        <a href="./#" class="nav-link">Menu</a>
+        <a href="./#menu" class="nav-link">Menu</a>
       </li>
       <li class="nav-item">
-        <a href="./#" class="nav-link">Coupon</a>
+        <a href="./#coupon" class="nav-link">Coupon</a>
       </li>
       <li class="nav-item">
-        <a href="./#" class="nav-link">Information</a>
+        <a href="./#information" class="nav-link">Information</a>
       </li>
       <li class="nav-item">
         <a href="contact" class="nav-link">Contact</a>
