--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -18,21 +18,21 @@
           <a href="#" class="nav-link">Top <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">About</a>
+          <a href="#about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Menu</a>
+          <a href="#menu" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Coupon</a>
+          <a href="#coupon" class="nav-link">Coupon</a>
         </li>
         <li class="nav-item dropdown">
           <a aria-expanded="false" aria-haspopup="true" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdown" role="button">
             Information
           </a>
           <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-            <a href="#" class="dropdown-item">Shop</a>
-            <a href="#" class="dropdown-item">Access</a>
+            <a href="#shop" class="dropdown-item">Shop</a>
+            <a href="#access" class="dropdown-item">Access</a>
           </div>
         </li>
       </ul>
@@ -461,22 +461,22 @@
         <a href="#" class="nav-link">Top</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">News</a>
+        <a href="#news" class="nav-link">News</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">About</a>
+        <a href="#about" class="nav-link">About</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Menu</a>
+        <a href="#menu" class="nav-link">Menu</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Coupon</a>
+        <a href="#coupon" class="nav-link">Coupon</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Information</a>
+        <a href="#information" class="nav-link">Information</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="contact" class="nav-link">Contact</a>
       </li>
     </ul>
     <p>
