--- a/app/views/contact.erb
+++ b/app/views/contact.erb
@@ -64,14 +64,15 @@
   </div>
   <div class="py-3">
     <div class="container">
+      <p><%= @message %></p>
       <h3 class="mb-3">お問い合わせフォーム</h3>
-      <form>
+      <form method="post" action="contact">
         <div class="form-group row">
           <label for="name" class="col-md-3 col-form-label">
             お名前 <span class="badge badge-warning">必須</span>
           </label>
           <div class="col-md-9">
-            <input type="text" class="form-control" id="name">
+            <input type="text" class="form-control" id="name" name="name">
           </div>
         </div>
         <div class="form-group row">
@@ -79,7 +80,7 @@
             メールアドレス <span class="badge badge-warning">必須</span>
           </label>
           <div class="col-md-9">
-            <input type="text" class="form-control" id="email" required="email">
+            <input type="text" class="form-control" id="email" name="email" required="email">
           </div>
         </div>
         <fieldset class="form-group">
@@ -125,7 +126,7 @@
         </div>
         <div class="form-group row justify-content-end">
           <div class="col-md-9">
-            <button class="btn btn-primary" type="button">確認する</button>
+            <button class="btn btn-primary" type="submit">確認する</button>
           </div>
         </div>
       </form>
