--- a/app/views/admin/system.html.erb
+++ b/app/views/admin/system.html.erb
@@ -60,7 +60,7 @@
       <li class="nav-item">
         <a class="nav-link" href="admin-contact">
           <i class="fas fa-fw fa-table"></i>
-          <span>Contacts</span></a>
+          <span>Contact</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
