--- a/app/views/admin/system.html.erb
+++ b/app/views/admin/system.html.erb
@@ -348,14 +348,14 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="../javascript/sb-admin-2.min.js"></script>
+  <script src="js/sb-admin-2.min.js"></script>
 
   <!-- Page level plugins -->
   <script src="vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="../javascript/demo/datatables-demo.js"></script>
+  <script src="js/demo/datatables-demo.js"></script>
 
   <script id="__bs_script__">//<![CDATA[
   document.write("<script async src='http://HOST:3002/browser-sync/browser-sync-client.js?v=2.26.3'><\/script>".replace("HOST", location.hostname));
